# nepomuk

./: .clang-format  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  Changelog.md  README.md  codecov.yml  index.js  package.json
cmake/: fixtures.h.in  icu_data.h.in  package.json.in  protoc.cmake  version.h.in
documentation/: developing.md  http.md  releasing.md
fixtures/google-example/: agency.txt  fare_attributes.txt  fare_rules.txt  feed_info.txt  routes.txt  stop_times.txt  stops.txt  transfers.txt  trips.txt
fixtures/three_lines/: agency.txt  routes.txt  shapes.txt  stop_times.txt  stops.txt  transfers.txt  trips.txt
frontends/debug/: index.html
frontends/eap/: README.md  index.html  package.json
frontends/lrm-plugin/: package.json
frontends/route/: Makefile  index.html  package.json
include/adaptor/: dictionary.hpp  ipc_response_to_json.hpp
include/algorithm/: functors.hpp  group_by.hpp  ranges.hpp  scc.hpp
include/annotation/: api.hpp  geometry.hpp  geometry_factory.hpp  line.hpp  line_factory.hpp  osrm.hpp  pbf.hpp  stop.hpp  stop_info.hpp  trip.hpp
include/bindings/: node.hpp  workers.hpp
include/date/: availability.hpp  icu.hpp  time.hpp  timezone.hpp
include/geometric/: bounding_box.hpp  coordinate.hpp  polyline.hpp  shape_table.hpp
include/gtfs/: accessibility.hpp  agency.hpp  calendar.hpp  constructor.hpp  dataset.hpp  date.hpp  fare.hpp  feed_info.hpp  frequency.hpp  gtfs_reader.hpp  provider.hpp  read_csv.hpp  route.hpp  schedule.hpp  sequence.hpp  service.hpp  shape.hpp  stop.hpp  time.hpp  transfer.hpp  trip.hpp  zone.hpp
include/id/: README.md  agency.hpp  block.hpp  convenience.hpp  dictionary.hpp  fare.hpp  line.hpp  route.hpp  sequence.hpp  service.hpp  shape.hpp  stop.hpp  trip.hpp  zone.hpp
include/ipc/: context.hpp  request_handler.hpp  service.hpp  service_configuration.hpp
include/navigation/: connection.hpp  leg.hpp  route.hpp  routing_algorithm.hpp  segment.hpp  stop.hpp  trip.hpp
include/search/: coordinate_to_stop.hpp  stop_to_line.hpp  stop_to_line_factory.hpp
include/service/: earliest_arrival.hpp  earliest_arrival_parameters.hpp  interface.hpp  master.hpp  route.hpp  route_parameters.hpp  tile.hpp  tile_parameters.hpp
include/timetable/: departure_table.hpp  departure_table_factory.hpp  duration_table.hpp  duration_table_factory.hpp  (+17 more)
scripts/: configure-bindings.sh  format.sh  get-dependencies.sh
server/: app.js  package.json  server.js
src/adaptor/: CMakeLists.txt  dictionary.cpp  ipc_response_to_json.cpp
src/algorithm/: CMakeLists.txt  scc.cpp
src/annotation/: CMakeLists.txt  api.cpp  geometry.cpp  geometry_factory.cpp  line.cpp  line_factory.cpp  osrm.cpp  pbf.cpp  stop.cpp  stop_info.cpp  trip.cpp
src/apps/: CMakeLists.txt  csv-import.cpp  ipc-provider.cpp  tile.cpp
src/bindings/: CMakeLists.txt  node.cpp  workers.cpp
src/date/: CMakeLists.txt  availability.cpp  icu.cpp  time.cpp  timezone.cpp
src/geometric/: CMakeLists.txt  bounding_box.cpp  coordinate.cpp  polyline.cpp
src/gtfs/: CMakeLists.txt  accessibility.cpp  agency.cpp  calendar.cpp  dataset.cpp  date.cpp  fare.cpp  feed_info.cpp  frequency.cpp  gtfs_reader.cpp  provider.cpp  read_csv.cpp  route.cpp  schedule.cpp  shape.cpp  stop.cpp  time.cpp  transfer.cpp  trip.cpp
src/ipc/: CMakeLists.txt  request_handler.cpp  service.cpp  service_configuration.cpp
src/ipc/proto/: coordinate.proto  request.proto  response.proto  route_request.proto  route_response.proto  tile_request.proto  tile_response.proto
src/navigation/: CMakeLists.txt  connection.cpp  leg.cpp  route.cpp  routing_algorithm.cpp  segment.cpp  stop.cpp  trip.cpp
src/navigation/algorithm/: timetable.cpp  timetable_dijkstra.cpp
src/search/: CMakeLists.txt  coordinate_to_stop.cpp  stop_to_line.cpp  stop_to_line_factory.cpp
src/service/: CMakeLists.txt  earliest_arrival.cpp  earliest_arrival_parameters.cpp  master.cpp  route.cpp  route_parameters.cpp  tile.cpp  tile_parameters.cpp
src/timetable/: CMakeLists.txt  departure_table.cpp  departure_table_factory.cpp  duration_table.cpp  duration_table_factory.cpp  graph_adaptor.cpp  line_table.cpp  line_table_factory.cpp  station_table.cpp  station_table_factory.cpp  stop_table.cpp  stop_table_factory.cpp  stop_to_trip.cpp  timetable.cpp  timetable_factory.cpp  transfer_table.cpp  transfer_table_factory.cpp  trip_table.cpp  trip_table_factory.cpp
src/tool/: CMakeLists.txt
src/tool/container/: dictionary.cpp  mapbox_vector_tile.cpp  string_table.cpp
src/tool/io/: std_line_stream.cpp  std_stream.cpp
src/tool/io/stream_concepts/: binary_stream.cpp
src/tool/proto/: accessibility.proto  agency.proto  calendar.proto  coordinate.proto  dictionary.proto  fare.proto  frequency.proto  gtfs.proto  route.proto  schedule.proto  shape.proto  stop.proto  transfer.proto  trip.proto
src/tool/status/: progress.cpp
src/transit/: CMakeLists.txt
test/: CMakeLists.txt  toolkit.hpp
test/adaptor/: CMakeLists.txt  dictionary.cc
test/algorithm/: CMakeLists.txt  group_by.cc  ranges.cc  scc.cc
test/annotation/: CMakeLists.txt  api.cc  geometry.cc  osrm.cc  pbf.cc  stop.cc  stop_info.cc  trip.cc
test/date/: CMakeLists.txt  availability.cc  time.cc  timezone.cc
test/geometric/: CMakeLists.txt  bounding_box.cc  coordinate.cc  polyline.cc
test/gtfs/: CMakeLists.txt  accessibility.cc  construct.cc  dataset.cc  date.cc  import-csv.cc  time.cc
test/id/: CMakeLists.txt  ids.cc
test/ipc/: CMakeLists.txt  invalid-requests-responses.cc  invalid-requests.cc  route.cc  tile.cc
test/mocks/: navigation.hpp
test/navigation/: CMakeLists.txt  dijkstra.cc  timetable.cc
test/search/: CMakeLists.txt  coordinate_to_stop.cc  stop_to_line.cc
test/service/: CMakeLists.txt  earliest_arrival.cc  master.cc  route.cc  tile.cc
test/timetable/: CMakeLists.txt  departure_table.cc  graph_adaptor.cc  line_table.cc  station_table.cc  stop_table.cc  transfer_table.cc  trip_table.cc
test/tool/: CMakeLists.txt  decode_csv.cc  dictonary.cc  graph.cc  id_hasher.cc  ids.cc  indexed_vector.cc  io.cc  surjective_mapping.cc  vector_tile.cc
(+64 files in other folders)
